# medrack

./: .env.example  .gitignore  CANONICAL.md  LICENSE  MEDRACK_CANONICAL.md  README.md  README_RUN.md  install.sh  pyproject.toml  run.sh  start_medrack.sh  start_stack.sh  stop.sh  stop_medrack.sh  stop_stack.sh
backend/: .gitignore  README.md  pyproject.toml
backend/docs/architecture/: 0001-layered-module-architecture.md  0002-subject-aware-prompts.md  0004-permanent-regression-dataset.md  0007-adaptive-retrieval.md  0010-reranker.md  0011-validation-pipeline.md  0014-runtime-bug-fix-report.md
backend/docs/developer/: frontend-integration-readiness.md  pipeline.md  services.md
backend/docs/frontend/: .env.example  COMPONENT_GUIDE.md  DATA_MODELS.md  FRONTEND_INTEGRATION.md  FRONTEND_INTEGRATION_REPORT.md  POSTMAN_COLLECTION.json  WORKFLOW.md  openapi.yaml
backend/medrack/: __init__.py  cli.py  config.py  orchestrate.py  state.py
backend/medrack/answer/: batch.py  cache.py  generate.py  kb_revision.py  llm.py  prompt.py  render.py  render_full.py  versioning.py
backend/medrack/benchmarks/: __init__.py  engine.py  report.py
backend/medrack/dashboard/: app.py  jobs.py
backend/medrack/ingest/: chapter.py  chunk.py  embed.py  format_detect.py  index.py  manifest.py  metadata.py  ocr.py  text_extract.py
backend/medrack/module/: __init__.py  extract.py  llm_extract.py
backend/medrack/planner/: __init__.py  blueprint.py  planner.py
backend/medrack/retrieval/: analyzer.py  engine.py  rerankers.py  strategy.py
backend/medrack/tests/: __init__.py  test_cli.py  (+36 more)
(+255 files in other folders)
