[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medrack"
dynamic = ["version"]
description = "Local RAG system for MBBS theory-exam answer generation"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.6",
    "reportlab>=4.0",
    "gradio>=4.0",
    "tiktoken>=0.5",
    "python-docx>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-telegram-bot>=20",
    "python-multipart>=0.0.9",
]

[project.scripts]
medrack = "medrack.cli:main"

[tool.setuptools.dynamic]
version = { attr = "medrack.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["medrack*"]
